# python-project-lvl3

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-action.yml
page_loader/: __init__.py
page_loader/content/: parser.py
page_loader/loader/: page.py  progress.py  resource_saver.py  resourse_loader.py
page_loader/path/: resolver.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: page-loader-local.html  page-loader.html
