[tool.poetry]
name = "python-project-lvl3"
version = "1.0.0"
description = ""
authors = ["DENYSUA <dloschakov@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
coverage = "^5.4"
pytest = "^6.1.0"
black = {version = "^20.8b1", allow-prereleases = true}
autopep8 = "^1.5.6"
requests-mock = "^1.9.2"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"